; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_raw_msg_raw_msg_copy_through.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_raw_msg_raw_msg_copy_through.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw_message = type { i32 }

@TL_IN_RAW_MSG = common dso_local global i32 0, align 4
@TL_OUT_RAW_MSG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @__tl_raw_msg_raw_msg_copy_through to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__tl_raw_msg_raw_msg_copy_through(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.raw_message, align 4
  %6 = alloca %struct.raw_message, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %16, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @TL_IN_RAW_MSG, align 4
  %11 = call i32 @rwm_clone(%struct.raw_message* %5, i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @rwm_trunc(%struct.raw_message* %5, i32 %12)
  %14 = load i32, i32* @TL_OUT_RAW_MSG, align 4
  %15 = call i32 @rwm_union(i32 %14, %struct.raw_message* %5)
  br label %22

16:                                               ; preds = %2
  %17 = load i32, i32* @TL_IN_RAW_MSG, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @rwm_split_head(%struct.raw_message* %6, i32 %17, i32 %18)
  %20 = load i32, i32* @TL_OUT_RAW_MSG, align 4
  %21 = call i32 @rwm_union(i32 %20, %struct.raw_message* %6)
  br label %22

22:                                               ; preds = %16, %9
  ret void
}

declare dso_local i32 @rwm_clone(%struct.raw_message*, i32) #1

declare dso_local i32 @rwm_trunc(%struct.raw_message*, i32) #1

declare dso_local i32 @rwm_union(i32, %struct.raw_message*) #1

declare dso_local i32 @rwm_split_head(%struct.raw_message*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
